chore: make the pipeline more runtime-agnostic